--- a/wordpress-templating/index.html
+++ b/wordpress-templating/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>TKPD Banana Template Guidelines</title>
 
-	<link rel="stylesheet" href="../style.css">
+	<link rel="stylesheet" href="./style.css">
 </head>
 <body>
 	<nav class="sidebar">
