--- a/wordpress-templating/index.html
+++ b/wordpress-templating/index.html
@@ -10,25 +10,25 @@
 	<nav class="sidebar">
 		<ul class="sidebar-ul">
 			<li id="id1">
-				<a class="sidebar__a" href="./temp-intro.html">Introduction &amp; Goals</a>
+				<a class="sidebar__a" href="./comps/temp-intro.html">Introduction &amp; Goals</a>
 			</li>
 			<li id="id2">
-				<a class="sidebar__a" href="./temp-hierarchy.html">Template Hierarchy</a>				
+				<a class="sidebar__a" href="./comps/temp-hierarchy.html">Template Hierarchy</a>				
 			</li>
 			<li id="id3">
-				<a class="sidebar__a" href="./temp-obligatory.html">Obligatory Template Files</a>				
+				<a class="sidebar__a" href="./comps/temp-obligatory.html">Obligatory Template Files</a>				
 			</li>
 			<li id="id4">
-				<a class="sidebar__a" href="./temp-minimal.html">How to Keep It Minimal</a>				
+				<a class="sidebar__a" href="./comps/temp-minimal.html">How to Keep It Minimal</a>				
 			</li>
 			<li id="id5">
-				<a class="sidebar__a" href="./temp-index.html">Index.php</a>				
+				<a class="sidebar__a" href="./comps/temp-index.html">Index.php</a>				
 			</li>
 			<li id="id5">
-				<a class="sidebar__a" href="./temp-management.html">Project Files and Folders Management</a>				
+				<a class="sidebar__a" href="./comps/temp-management.html">Project Files and Folders Management</a>				
 			</li>
 			<li id="id6">
-				<a class="sidebar__a" href="./temp-links.html">Useful Links</a>				
+				<a class="sidebar__a" href="./comps/temp-links.html">Useful Links</a>				
 			</li>
 		</ul>
 	</nav>
@@ -36,7 +36,7 @@
 	<article class="wrap-container">
 		<header class="title">
 			<h1>Welcome to Banana Team Guidelines and Documentation</h1>
-			<img class="title__img" src="../images/banana-warhol.png" alt="" />
+			<img class="title__img" src="./images/banana-warhol.png" alt="" />
 		</header>
 	</article>
 </body>
